# job-monitoring-agent

./: .gitignore  01_setup_table.py  02_agent.py  03_log_and_register.py  04_alerts.py  README.md  app.py  app.yaml  chain.py  config.yaml  pyproject.toml  requirements.txt
daily-logs/: 2026-05-19.md
job_monitor/: __init__.py  agent.py  config.py  seed.py  sql_guard.py  tools.py
tests/: conftest.py  test_config.py  test_seed.py  test_sql_guard.py
